--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "core-js": "^3.8.3",
+    "upsilon.js": "^1.3.1",
     "vue": "^3.2.13",
     "vue-i18n": "^9.1.0",
     "vue-router": "^4.0.3"
