--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "core-js": "^3.8.3",
     "jszip": "^3.10.1",
-    "upsilon.js": "^1.4.2",
+    "upsilon.js": "github:Yaya-Cout/Upsilon.js#master",
     "vue": "^3.2.13",
     "vue-i18n": "^9.1.0",
     "vue-router": "^4.0.3"
